[package]
name = "shell1"
version = "0.1.0"
edition = "2021"

[lib]
name = "shell1_lib"
path = "src/lib.rs"

[[bin]]
name = "shell1_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
